IGNITE-843 WIP metadata: implemented fields metadata controls.

--- a/modules/web-control-center/nodejs/views/configuration/metadata.jade
+++ b/modules/web-control-center/nodejs/views/configuration/metadata.jade
@@ -28,12 +28,13 @@ block content
     .docs-body(ng-controller='metadataController')
         .block-callout
             p(ng-bind-html='joinTip(screenTip)')
-        .links(ng-hide='metadata.length == 0')
-            table(st-table='metadata')
+        .links(ng-hide='metadatas.length == 0')
+            table(st-table='metadatas')
                 tbody
-                    tr(ng-repeat='row in metadata track by row._id')
+                    tr(ng-repeat='row in metadatas track by row._id')
                         td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
                             a(ng-click='selectItem(row)') {{$index + 1}}) {{row.name}}
+                hr
         panel-group(bs-collapse data-allow-multiple="false")
             .panel.panel-default
                 .panel-heading
@@ -42,14 +43,12 @@ block content
                 .panel-collapse(role="tabpanel" bs-collapse-target)
                     .panel-body
                         button.btn.btn-primary(ng-click='createItem()') &nbspAdd metadata
-                        label(style='margin-left: 15px; margin-right: 10px') for:
+                        label(style='margin-left: 6px; margin-right: 10px') for:
                         button.btn.btn-default(ng-model='template' data-template='/select' data-placeholder='Choose metadata type' bs-options='item.value as item.label for item in templates' bs-select)
                         i.tiplabel.fa.fa-question-circle(bs-tooltip data-title='{{joinTip(templateTip)}}' type='button')
-                        hr
                         form.form-horizontal(name='manualForm' ng-if='backupItem' novalidate)
-                            .panel-body
-                                .settings-row(ng-repeat='field in metadataManual')
-                                    +form-row
+                            .settings-row(ng-repeat='field in metadataManual')
+                                +form-row
                             button.btn.btn-primary(ng-disabled='manualForm.$invalid' ng-click='saveItem()') Save
                             button.btn.btn-primary.btn-second(ng-show='backupItem._id' ng-click='removeItem()') Remove
             .panel.panel-default
