--- a/modules/web-control-center/nodejs/views/configuration/sidebar.jade
+++ b/modules/web-control-center/nodejs/views/configuration/sidebar.jade
@@ -27,7 +27,7 @@ mixin sidebar-item(ref, num, txt)
 block container
     .row
         .col-sm-2.border-right.section-left.greedy
-            .sidebar-nav
+            .sidebar-nav(bs-affix)
                 ul.menu(ng-controller='activeLink')
                     +sidebar-item('/configuration/clusters', 1, 'Clusters')
                     +sidebar-item('/configuration/metadata', 2, 'Metadata')
