--- a/modules/web-control-center/nodejs/views/configuration/summary.jade
+++ b/modules/web-control-center/nodejs/views/configuration/summary.jade
@@ -19,16 +19,15 @@ extends sidebar
 append scripts
     script(src='/summary-controller.js')
 
-    script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushXml.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJava.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushPlain.js')
     script(src="//cdn.jsdelivr.net/angularjs/1.3.15/angular-animate.min.js")
     script(src="//cdn.jsdelivr.net/angularjs/1.3.15/angular-sanitize.min.js")
 
+    script(src='//cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/theme-chrome.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/mode-xml.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/mode-java.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/mode-dockerfile.js')
+
 append css
-    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.css')
-    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeDefault.css')
 
 include ../includes/controls
 
@@ -55,7 +54,7 @@ block content
                         tr(ng-repeat='row in clusters track by row._id')
                             td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
                                 a(ng-click='selectItem(row)') {{$index + 1}}) {{row.name}}
-        div(ng-show='selectedItem && generated' role="tab" method='post' action='summary/download')
+        div(ng-show='selectedItem' role="tab" method='post' action='summary/download')
             div(bs-collapse data-start-collapsed='false')
                 .panel.panel-default
                     form.panel-heading(role='tab' method='post' action='summary/download')
@@ -67,30 +66,18 @@ block content
                             button.btn.btn-primary.pull-right(type='submit' style='margin-top: -5px') Download
                     .panel-collapse(role="tabpanel" bs-collapse-target)
                         .panel-body
-                            .configBox(ng-show='selectedItem && !generateError')
-                                ul.nav.nav-tabs
-                                    li(ng-class='{active: cfgLangServer == "xml"}')
-                                        a(href, ng-click='cfgLangServer = "xml"')
-                                            img(src='/images/xml.png', width='16px' height='16px')
-                                            |  XML
-                                    li(ng-class='{active: cfgLangServer =="java"}')
-                                        a(href, ng-click='cfgLangServer = "java"')
-                                            img(src='/images/java.png', width='16px' height='16px')
-                                            |  Java
-                                    li(ng-class="{active: cfgLangServer =='docker'}")
-                                        a(href, ng-click='cfgLangServer = "docker"')
-                                            img(src='/images/docker.png', width='16px' height='16px')
-                                            |  Dockerfile
-                                .settings-row
-                                    div(ng-show="cfgLangServer == 'xml'")
-                                        #xmlServer
-                                    div(ng-show="cfgLangServer == 'java'")
+                            .configBox(ng-show='selectedItem' bs-tabs)
+                                div(title='<img src="/images/xml.png" width="16px" height="16px"/> XML' bs-pane)
+                                    .configBox(ui-ace='{ onLoad: aceInit, mode: "xml" }' ng-model='xmlServer' style='margin: 0.65em 0;')
+                                div(title='<img src="/images/java.png" width="16px" height="16px"/> Java' bs-pane)
+                                    .settings-row
                                         .col-sm-1
                                             label Generate:
                                         .col-sm-3
                                             button.form-control(type='button' ng-model='javaClassServer' bs-select data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in javaClassItems' data-sort='false')
-                                        #javaServer
-                                    div(ng-show="cfgLangServer == 'docker'")
+                                    .configBox(ui-ace='{ onLoad: aceInit, mode: "java" }' ng-model='javaServer')
+                                div(title='<img src="/images/docker.png" width="16px" height="16px"/> Dockerfile' bs-pane)
+                                    .settings-row
                                         p
                                             +hard-link('https://docs.docker.com/reference/builder', 'Docker')
                                             | &nbsp;file is a text file with instructions to create Docker image.<br/>
@@ -104,7 +91,7 @@ block content
                                             label(for='os') Operation System:
                                         .col-sm-4
                                             input#os.form-control(type='text', ng-model='os' placeholder='debian:8' data-min-length="0" data-html="1" data-auto-select="true" data-animation="am-flip-x" bs-typeahead bs-options='os for os in oss')
-                                        .settings-row#docker(style='margin-top: 15px')
+                                    div(ui-ace='{ onLoad: aceInit, mode: "dockerfile" }' ng-model='dockerServer')
             div(bs-collapse data-start-collapsed='false')
                 .panel.panel-default
                     form.panel-heading(role='tab' method='post' action='summary/download')
@@ -117,24 +104,16 @@ block content
                             button.btn.btn-primary.pull-right(type='submit' style='margin-top: -5px') Download
                     .panel-collapse(role="tabpanel" bs-collapse-target)
                         .panel-body
-                            .configBox(ng-show='selectedItem && !generateError')
+                            div(ng-show='selectedItem')
                                 .settings-row(ng-repeat='field in clientFields')
                                     +form-row-custom(['col-sm-3'], ['col-sm-3'])
-                                ul.nav.nav-tabs
-                                    li(ng-class='{active: cfgLangClient == "xml"}')
-                                        a(href, ng-click='cfgLangClient = "xml"')
-                                            img(src='/images/xml.png', width='16px' height='16px')
-                                            |  XML
-                                    li(ng-class='{active: cfgLangClient =="java"}')
-                                        a(href, ng-click='cfgLangClient = "java"')
-                                            img(src='/images/java.png', width='16px' height='16px')
-                                            |  Java
-                                .settings-row
-                                    div(ng-show="cfgLangClient == 'xml'")
-                                        #xmlClient
-                                    div(ng-show="cfgLangClient == 'java'")
-                                        .col-sm-1
-                                            label Generate:
-                                        .col-sm-4
-                                            button.form-control(type='button' ng-model='javaClassClient' bs-select data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in javaClassItems' data-sort='false')
-                                        #javaClient
+                                .configBox(bs-tabs)
+                                    div(title='<img src="/images/xml.png" width="16px" height="16px"/> XML' bs-pane)
+                                        .configBox(ui-ace='{ onLoad: aceInit, mode: "xml" }' ng-model='xmlClient' style='margin: 0.65em 0;')
+                                    div(title='<img src="/images/java.png" width="16px" height="16px"/> Java' bs-pane)
+                                        .settings-row
+                                            .col-sm-1
+                                                label Generate:
+                                            .col-sm-4
+                                                button.form-control(type='button' ng-model='javaClassClient' bs-select data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in javaClassItems' data-sort='false')
+                                        div(ui-ace='{ onLoad: aceInit, mode: "java" }' ng-model='javaClient')
