IGNITE-843 Fixed table inplace edit.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -680,10 +680,6 @@ button .caret, .btn .caret {
   }
 }
 
-.table-form-control {
-  width: auto;
-}
-
 .theme-line .panel-heading {
   padding: 10px 10px;
   margin: 0;
@@ -837,7 +833,7 @@ label {
 
 .labelField {
   float: left;
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 .labelFormField {
@@ -1059,3 +1055,21 @@ a {
   width: 100%;
   height: 400px;
 }
+
+.grid {
+  display: flex;
+  flex-wrap: nowrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.grid-cell {
+  flex-basis: 50%;
+}
+
+.grid-fixed-cell {
+  flex-basis: 10px;
+}
+
+
