--- a/modules/web-control-center/nodejs/views/includes/controls.jade
+++ b/modules/web-control-center/nodejs/views/includes/controls.jade
@@ -37,6 +37,15 @@ mixin btn-up(show, click)
 mixin btn-down(show, click)
     i.tipField.fa.fa-arrow-down(ng-show=show ng-click=click)
 
+mixin table-pair-edit(keyModel, valModel, keyPlaceholder, valPlaceholder)
+    .grid
+        .grid-cell
+            input.form-control(type='text' ng-model=keyModel placeholder=keyPlaceholder)
+        div
+            label &nbsp;/&nbsp;
+        .grid-cell
+            input.form-control(type='text' ng-model=valModel placeholder=valPlaceholder)
+
 mixin table-pair(header, tblMdl, keyFld, valFld, keyPlaceholder, valPlaceholder)
     .col-sm-6
         label.table-header #{header}:
@@ -53,18 +62,12 @@ mixin table-pair(header, tblMdl, keyFld, valFld, keyPlaceholder, valPlaceholder)
                         label.labelField {{$index + 1}})
                         +btn-save('tablePairSaveVisible(curKey, curValue)', 'tablePairSave(tablePairValid, backupItem, field, curKey, curValue, $index)')
                         .input-tip
-                            .col-sm-12
-                                input.form-control.table-form-control(type='text' ng-model='curKey' placeholder=keyPlaceholder)
-                                label &nbsp;/&nbsp;
-                                input.form-control.table-form-control(type='text' ng-model='curValue' placeholder=valPlaceholder)
+                            +table-pair-edit('curKey', 'curValue', keyPlaceholder, valPlaceholder)
     .settings-row(ng-show='tableNewItemActive(field)')
         .col-sm-6
             +btn-save('tablePairSaveVisible(newKey, newValue)', 'tablePairSave(tablePairValid, backupItem, field, newKey, newValue, -1)')
             .input-tip
-                input.form-control.table-form-control(type='text' ng-model='newKey' placeholder=keyPlaceholder)
-                label &nbsp;/&nbsp;
-                input.form-control.table-form-control(type='text' ng-model='newValue' placeholder=valPlaceholder)
-
+                +table-pair-edit('newKey', 'newValue', keyPlaceholder, valPlaceholder)
 
 mixin details-row
     - var lblDetailClasses = ['col-sm-4', 'details-label']
